fix(Table): incorrect display of fixed table columns when visible false (#3066)
* test: 更新单元测试

* doc: 更新 z-index 值

* chore: bump version 8.3.4-beta02

* fix: 兼容老模板

* fix(#3062): 修复计算固定列时未忽略隐藏列宽度问题

link https://github.com/dotnetcore/BootstrapBlazor/issues/3062?wt.mc_id=DT-MVP-5004174

* fix: 修复右侧固定列计算方法

* chore: bump version 8.3.4-bta03

* test: 更新单元测试

* test: 更新单元测试

--- a/src/BootstrapBlazor.Server/Components/Layout/ComponentLayout.razor.css
+++ b/src/BootstrapBlazor.Server/Components/Layout/ComponentLayout.razor.css
@@ -28,7 +28,7 @@
 .tabs-coms ::deep > .tabs > .tabs-header {
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: 10;
 }
 
 ::deep :is(.code-razor, .code-cs) pre {
